<resources>
    <string name="app_name">PayMe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pay">Pay</string>
    <string name="welcome">"Welcome "</string>
    <string name="card_number">Card Number</string>
    <string name="month">Expiry Month</string>
    <string name="year">Expiry Year</string>
    <string name="CVV">CVV</string>
    <string name="submit">Submit</string>
    <string name="CVC">CVC</string>
    <string name="logout">Logout</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="QTY">QTY</string>
    <string name="Price">Price</string>
    <string name="LineTotal">Line Total</string>
    <string name="invoice_number">Invoice No. 112</string>
</resources>
